--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ dependencies = [
     "numpy>=1.26.0",
     "scipy>=1.12.0",
     "cachetools>=5.3.0",
+    "openai>=1.0.0",
+    "matplotlib>=3.8.0",
+    "seaborn>=0.13.0",
 ]
 
 [project.scripts]
